--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rubiks Time | Cubing Time Tracker</title>
+    <title>Rubiks Time | Cubing Time Tracker | Speedcubing Timer | Cubes for Sale | T-Shirts | Cubing Accessories | Rubiks Timer</title>
   </head>
   <body>
     
